--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -38,13 +38,14 @@
           </ul>
           <ul class="right">
             <li><a href="/about">About</a></li>
+            <li><a href="/swords">View All My Swords</a></li>
           </ul>
         </div>
       </nav>
     </header>
     <main class="container">{% block content %} {% endblock %}</main>
     <footer class="page-footer">
-      <div class="right">All Rights Reserved, &copy; 2021 Cat Collector &nbsp;</div>
+      <div class="right">All Rights Reserved, &copy; 2023 Sword Collector &nbsp;</div>
     </footer>
   </body>
 </html>
