Updated Urls in html

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -37,8 +37,8 @@
             </li>
           </ul>
           <ul class="right">
-            <li><a href="/about">About</a></li>
-            <li><a href="/swords">View All My Swords</a></li>
+            <li><a href="{% url 'about' }%">About</a></li>
+            <li><a href="{% url 'swords' %}">View All My Swords</a></li>
           </ul>
         </div>
       </nav>
