--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -30,7 +30,7 @@
           <ul>
             <li>
               <a
-                href="/"
+                href='/'
                 class="left brand-logo"
                 >&nbsp;&nbsp;Sword Collector</a
               >
@@ -38,6 +38,7 @@
           </ul>
           <ul class="right">
             <li><a href="{% url 'about' }%">About</a></li>
+            <li><a href="{% url 'swords_create' }%">Add a Sword</a></li>
             <li><a href="{% url 'swords' %}">View All My Swords</a></li>
           </ul>
         </div>
