Uppdated the UI

--- a/main_app/templates/swords/detail.html
+++ b/main_app/templates/swords/detail.html
@@ -10,6 +10,10 @@
         <p>Description: {{ sword.description }}</p>
         <p>First Seen: {{ sword.firstSeen }}</p>
     </div>
+    <div class="card-action">
+        <a href="{% url 'swords_update' sword.id %}">Edit</a>
+        <a href="{% url 'swords_delete' sword.id %}">Delete</a>
+    </div>
 </div>
 
 {% endblock %}
