--- a/main_app/templates/main_app/sword_form.html
+++ b/main_app/templates/main_app/sword_form.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Add Sword</h1>
+    {% if object %}
+        <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
+    {% else %}
+        <h1>Add Cat</h1>
+    {% endif %}
     <form action="" method="POST">>
         {% csrf_token %}
         <table>
