--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -37,9 +37,9 @@
             </li>
           </ul>
           <ul class="right">
-            <li><a href="{% url 'about' }%">About</a></li>
-            <li><a href="{% url 'swords_create' }%">Add a Sword</a></li>
-            <li><a href="{% url 'swords' %}">View All My Swords</a></li>
+            <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'swords_create' %}">Add a Sword</a></li>
+            <li><a href="{% url 'index' %}">View All My Swords</a></li>
           </ul>
         </div>
       </nav>
