--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header class="navbar-fixed">
-      <nav>
+      <nav class="teal">
         <div class="nav-wrapper">
           <ul>
             <li>
